--- a/src/modules/Filter/filter.scss
+++ b/src/modules/Filter/filter.scss
@@ -70,15 +70,15 @@
       background-color: $orange;
     }
 
-    &--flower {
+    &--bouquets {
       background-image: url('/img/flower-filter.png'); // от папки public
     }
 
-    &--toy {
+    &--toys {
       background-image: url('/img/toy-filter.png');
     }
 
-    &--card {
+    &--postcards {
       background-image: url('/img/card-filter.png');
     }
 
